Harden JVM argument masking after review (#1113)
- Always mask the shell commands of -XX:OnError and
  -XX:OnOutOfMemoryError: they are opaque and may embed credentials
  (e.g. curl -u user:pass) that no value pattern recognizes.
- Mask secret key=value options nested in any comma-separated
  argument value, not only in agent options.
- METADATA_ONLY keeps -X/-XX flags and plain token values (75, 512m,
  summary) visible for tuning, but masks free-text values such as
  paths, commands and -Xlog selections, and standalone operands.
- The conformance check now fails, instead of skipping, when the JVM
  Tuning or Live Memory panel is unavailable.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>
Copilot-Session: 26f50c86-7558-4d9d-bf72-e6be6a4f23d8